# fastapi-to-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
examples/: complex_api.py  task_manager.py
fastapi_to_skill/: __init__.py  __main__.py  main.py  models.py  parser.py  spec_loader.py
fastapi_to_skill/generators/: __init__.py  cli_generator.py  pyproject_generator.py  skill_generator.py
fastapi_to_skill/templates/: cli.py.jinja2  skill.codex.md.jinja2  skill.md.jinja2  skill.openclaw.md.jinja2
tests/: conftest.py  test_e2e.py  test_parser.py
